[metadata]
name = openapi_server
version = 1.4.10
description = Build Once. Integrate Your Blockchain Everywhere. 
long_description = file: README.md
keywords = OpenAPI Rosetta
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    fastapi[all]
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
